// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button component > renders 1`] = `
<button
  class="Button__1kgv65v2 Button_iconLayout_sx__1kgv65vb Button_size_medium__1kgv65v9 Button_theme_dark__1kgv65v3 Button_variant_primary__1kgv65v5 Button__compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_p_noMargin_true__3igy4nb Typography_p_size_m__3igy4nd Typography_p_strong_true__3igy4nf"
  >
    Click me
  </p>
</button>
`;

exports[`Button component > renders with a disabled state 1`] = `
<button
  class="Button__1kgv65v2 Button_iconLayout_sx__1kgv65vb Button_size_medium__1kgv65v9 Button_theme_dark__1kgv65v3 Button_variant_primary__1kgv65v5 Button__compound_0__1kgv65vd"
  data-disabled="true"
  data-rac=""
  disabled=""
  type="button"
>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_p_noMargin_true__3igy4nb Typography_p_size_m__3igy4nd Typography_p_strong_true__3igy4nf"
  >
    Click me
  </p>
</button>
`;

exports[`Button component > renders with a loading state 1`] = `
<button
  class="Button__1kgv65v2 Button_iconLayout_sx__1kgv65vb Button_size_medium__1kgv65v9 Button_theme_dark__1kgv65v3 Button_variant_primary__1kgv65v5 Button__compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <div
    class="Spinner__gbijxg1 Spinner_size_medium__gbijxg3"
  >
    <div
      class="Spinner_circle__gbijxg5 Spinner_circle_size_medium__gbijxgc Spinner_circle_theme_dark__gbijxg6"
    />
    <div
      class="Spinner_spin__gbijxgi Spinner_spin_size_medium__gbijxgp Spinner_spin_theme_dark__gbijxgm"
    />
  </div>
</button>
`;

exports[`Button component > renders with a size 1`] = `
<button
  class="Button__1kgv65v2 Button_iconLayout_sx__1kgv65vb Button_size_large__1kgv65va Button_theme_dark__1kgv65v3 Button_variant_primary__1kgv65v5 Button__compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_p_noMargin_true__3igy4nb Typography_p_size_l__3igy4nc Typography_p_strong_true__3igy4nf"
  >
    Click me
  </p>
</button>
`;

exports[`Button component > renders with a theme 1`] = `
<button
  class="Button__1kgv65v2 Button_iconLayout_sx__1kgv65vb Button_size_medium__1kgv65v9 Button_theme_dark__1kgv65v3 Button_variant_primary__1kgv65v5 Button__compound_0__1kgv65vd"
  data-rac=""
  type="button"
>
  <p
    class="Typography__3igy4na Typography_base__3igy4n9 Typography_p_noMargin_true__3igy4nb Typography_p_size_m__3igy4nd Typography_p_strong_true__3igy4nf"
  >
    Click me
  </p>
</button>
`;
